infra/thmanyah/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana-ns
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - name: http
      port: 3001
      targetPort: 3000
      protocol: TCP
